Updated code with latest fixes/features

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <div class="chat-header">
       <div class="logo">
         <div class="logo-icon"><i class="fas fa-brain"></i></div>
-        <div class="brand-name">WEBSAI</div>
+        <div class="brand-name">INFOSYNTH</div>
       </div>
       <div class="chat-status">
         <div class="status-indicator"></div>Online & Ready
